# test2

./: .bazelrc  .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  Doxyfile  WORKSPACE.bazel  pyproject.toml  requirements-dev.txt
.gitea/workflows/: check.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.md
bazel/: pybind11_defs.bzl  result.BUILD  spdlog.BUILD  tf.patch  workspace0.bzl  workspace1.bzl
ccsrc/: CMakeLists.txt
ccsrc/DistributedIR/: CMakeLists.txt  block.cc  dividegraph.cpp
ccsrc/DistributedIR/include/DistributedIR/: block.hpp  dividegraph.hpp  edge.hpp  graph.hpp  input.hpp  node.hpp  tensor.hpp
ccsrc/DistributedIR/python/: CMakeLists.txt  graph.cc
ccsrc/adapters/include/adapters/tensorflow/pass/: placement_pass.h
ccsrc/adapters/include/adapters/tensorflow/rpc/: client.h  util.h
ccsrc/adapters/tensorflow/pass/: placement_pass.cc
ccsrc/adapters/tensorflow/rpc/: client.cc  graph.proto  server.cc  service.proto  util.cc
ccsrc/cluster/include/: CMakeLists.txt
ccsrc/cluster/include/cluster/: cluster.hpp  server.hpp
ccsrc/common/: CMakeLists.txt
ccsrc/common/include/common/: error.hpp  fmt.hpp  id.hpp  log.h  result_macro.hpp  traits.hpp  types.hpp  util.hpp
ccsrc/cost_graph/: CMakeLists.txt
ccsrc/cost_graph/fusion/: CMakeLists.txt  aware_fusion.cc
ccsrc/cost_graph/include/: CMakeLists.txt
ccsrc/cost_graph/include/cost_graph/: common.hpp  cost_graph.hpp
ccsrc/cost_graph/include/fusion/: aware_fusion.h
ccsrc/policy/: CMakeLists.txt
ccsrc/policy/aware/: CMakeLists.txt  aware_interface.cc  networkx_generator.cc
ccsrc/policy/fd-dps/: CMakeLists.txt  fddps_algorithm.cc
ccsrc/policy/include/: CMakeLists.txt
ccsrc/policy/include/policy/aware/: aware_interface.h  networkx_generator.h
ccsrc/policy/include/policy/fd-dps/: fddps_algorithm.h
ccsrc/policy/include/policy/sgp/: Builder.h  graphGroup.h  graphPartition.h  topological.h
ccsrc/policy/include/policy/trinity/: trinity_interface.h
ccsrc/policy/sgp/: CMakeLists.txt  graphPartition.cc
ccsrc/policy/trinity/: CMakeLists.txt  trinity_interface.cc
cmake/: FetchBoost.cmake  FetchFmt.cmake  FetchGTest.cmake  FetchLLVM.cmake  FetchPybind11.cmake  FetchRange.cmake  FetchResult.cmake  FetchSpdlog.cmake  HeaderOnlyLibrary.cmake
docs/dev/: alphafold_env.md  build.md
examples/: mnist.py
python/framework/adapters/jax/: __init__.py  api.py  block2jaxpr.py  jaxpr2graph.py  profile.py  schedule.py
python/framework/aware/: graph.py  interface.py  progressive_fnn.py  progressive_graph.py  progressive_nn.py  progressive_placer.py  simulator.py
python/framework/core/: types.py
python/framework/tools/: graph_dot.py  log.py
python/framework/trinity/: cluster.py  graph_scheduling.py  interface.py  programer.py  trinity_program.py
python/framework/trinity/ge/: __init__.py  alias.py  utils.py  walker.py
python/framework/trinity/ge/models/: __init__.py  node2vec.py
python/framework/trinity/sim/tf_placement_sim/: tf_pl_rewarder.py  tf_rew.py
scripts/: batch.py  build-tf  configure  cppcheck-tf  format-cc  format-py  lint-cc  lint-py  run-clang-tidy  shellcheck
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  test_DistributedIR.cc  test_aware.cc  test_aware_fusion.cc  test_aware_main.cc  test_common.cc  test_cost_graph.cc  test_fddps.cc  test_networkx_generator.cc  test_trinity.cc
tools/: call_aware.cc  tf_run_graph.cc
