workspace(name = "framework")

load("//:bazel/workspace0.bzl", "framework_workspace0")
framework_workspace0()

load("//:bazel/workspace1.bzl", "framework_workspace1")
framework_workspace1()


load("@org_tensorflow//tensorflow:workspace3.bzl", "tf_workspace3")

tf_workspace3()

load("@org_tensorflow//tensorflow:workspace2.bzl", "tf_workspace2")

tf_workspace2()

load("@org_tensorflow//tensorflow:workspace1.bzl", "tf_workspace1")

tf_workspace1()

load("@org_tensorflow//tensorflow:workspace0.bzl", "tf_workspace0")

tf_workspace0()
